--- a/Software/resources/views/home.njk
+++ b/Software/resources/views/home.njk
@@ -25,5 +25,27 @@
 
 {{ form.close() }}
 
+
+
+<h3>Crear Usuario</h3>
+{{ form.open({action: 'UsersController.create'}) }}
+  {{ form.select('type', ['Convergente','Divergente','Asimilador','Acomodador'], null, 'Tipo de aprendizaje usuario') }}
+
+  {{ csrfField }}
+  <br>
+  {{ form.label('email', 'Correo Electronico') }}
+  {{ form.text('email') }}
+  <br>
+  {{ form.label('username', 'Nombre de Usuario') }}
+  {{ form.text('username') }}
+  <br>
+  {{ form.label('password', 'Contraseña') }}
+  {{ form.password('password') }}
+
+  <div class="button">
+	{{ form.submit('Registrar') }}
+  </div>
+{{ form.close() }}
+
 {% endblock %}
 
