Implementación Frontend: drag & drop y seleccionar contenidos
Se implementa a la interfaz de lexperto, luego de colocar links, el seleccionar, y ordenar material. Esto utilizando Vue.Js, y también, se logra "armonizar" Vue con Adnois, pasando una "token" de sesión de Vue a Adonis, para realizar Http Post

--- a/Software/public/style.css
+++ b/Software/public/style.css
@@ -104,3 +104,17 @@ body {
 /*CSS que no sigue convenciones*/
 
 textarea {height: 200px; width: 400px;}
+
+
+
+.flex-container {
+  display: flex;
+  flex-direction: column;
+  min-height: 5vh;
+}
+
+.content {
+  flex: 1;
+}
+
+
