--- a/Software/resources/views/master.njk
+++ b/Software/resources/views/master.njk
@@ -56,5 +56,13 @@
     </div>
   </section>
 
+  <script>
+    window.Adonis = "{{ csrfToken }}"  </script>
+  <script type="text/javascript" src="scripts/vue.js"> </script>
+  <script type="text/javascript" src="scripts/Sortable.min.js"> </script>
+  <script type="text/javascript" src="scripts/vuedraggable.js"> </script>
+  <script type="text/javascript" src="scripts/vue-resource.js"> </script>
+  <script type="text/javascript" src="scripts/vueconf.js"> </script>
+
 </body>
 </html>
