Integración Template para Experto y Catalogadores
Utilzindo el template que les puse por WhatsApp, lo integre para el experto y el Calificador. Cabe decir, que hay que realizar unorden de templates, debido a que van a comenzar a enredarse harto xD.

--- a/Software/resources/views/calificador.njk
+++ b/Software/resources/views/calificador.njk
@@ -1,4 +1,4 @@
-{% extends 'master' %}
+{% extends 'master2' %}
 {% block content %}
 
 <h1> Hola {{ currentUser.username }}, usuario del tipo {{ type }}!!! </h1>
