--- a/Software/resources/views/experto.njk
+++ b/Software/resources/views/experto.njk
@@ -1,27 +1,28 @@
-{% extends 'master' %}
+{% extends 'master2' %}
 {% block content %}
 
 
-<p>Bienvenido a la aplicación!, coloque una lista de link donde quiera obtener contenido</p>
 
-<div class="row">
-	<div class="col-sm-6">
-	  <h3>Ingresar Links</h3>
+			<p>Bienvenido a la aplicación!, coloque una lista de link donde quiera obtener contenido</p>
 
-	  {{ form.open({action: 'ContentsController.scrape'}) }}
-	  <div style="">
-			{{ form.textarea('pagelist') }}
-		  </div>
-		  <div class="button">
-			  {{ form.submit('Ingresar') }}
-		  </div>
-	  {{ form.close() }}
+			<div class="row">
+				<div class="col-sm-6">
+				  <h3>Ingresar Links</h3>
 
-	</div>
-	<div class="col-sm-6">
-	</div>
-</div>
+				  {{ form.open({action: 'ContentsController.scrape'}) }}
+				  <div style="">
+						{{ form.textarea('pagelist') }}
+					  </div>
+					  <div class="button">
+						  {{ form.submit('Ingresar') }}
+					  </div>
+				  {{ form.close() }}
 
+				</div>
+				<div class="col-sm-6">
+				</div>
+
+			</div>
 
 {% endblock %}
 
