Orden de Vistas Experto/Calificador
Se ordenan la ubicación de los archivos de Vistas, para que la esturctura del código sea más entendible.

--- a/Software/resources/views/calificador/dashboard.njk
+++ b/Software/resources/views/calificador/dashboard.njk
@@ -1,4 +1,4 @@
-{% extends 'master2' %}
+{% extends 'calificador/master' %}
 {% block content %}
 
 <h1> Hola {{ currentUser.username }}, usuario del tipo {{ type }}!!! </h1>
