--- a/Software/resources/views/calificador/master.njk
+++ b/Software/resources/views/calificador/master.njk
@@ -7,7 +7,7 @@
     <meta content='lab2023' name='author'>
     <meta content='' name='description'>
     <meta content='' name='keywords'>
-    <link href="css/application-a07755f5.css" rel="stylesheet" type="text/css" />
+    <link href="/css/application-a07755f5.css" rel="stylesheet" type="text/css" />
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<link href="https://netdna.bootstrapcdn.com/font-awesome/3.2.0/css/font-awesome.min.css" rel="stylesheet" type="text/css" />
     <link href="assets/images/favicon.ico" rel="icon" type="image/ico" />
@@ -17,7 +17,7 @@
     <!-- Navbar -->
     <div class='navbar navbar-default' id='navbar'>
       <a class='navbar-brand' href='#'>
-		<img src="assets/Logo.svg" style="height: 30px; margin-bottom: 6px;"></img>
+		<img src="/assets/Logo.svg" style="height: 30px; margin-bottom: 6px;"></img>
         KolbFinder
       </a>
       <ul class='nav navbar-nav pull-right'>
@@ -146,15 +146,15 @@
       {% block footer %}
 	  {% endblock %}
     <!-- Javascripts -->
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js" type="text/javascript"></script><script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js" type="text/javascript"></script><script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.6.2/modernizr.min.js" type="text/javascript"></script><script src="scripts/application-985b892b.js" type="text/javascript"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js" type="text/javascript"></script><script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js" type="text/javascript"></script><script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.6.2/modernizr.min.js" type="text/javascript"></script><script src="/scripts/application-985b892b.js" type="text/javascript"></script>
 
   <script>
     window.Adonis = "{{ csrfToken }}"  </script>
-  <script type="text/javascript" src="scripts/vue.js"> </script>
-  <script type="text/javascript" src="scripts/Sortable.min.js"> </script>
-  <script type="text/javascript" src="scripts/vuedraggable.js"> </script>
-  <script type="text/javascript" src="scripts/vue-resource.js"> </script>
-  <script type="text/javascript" src="scripts/vueconf.js"> </script>
+  <script type="text/javascript" src="/scripts/vue.js"> </script>
+  <script type="text/javascript" src="/scripts/Sortable.min.js"> </script>
+  <script type="text/javascript" src="/scripts/vuedraggable.js"> </script>
+  <script type="text/javascript" src="/scripts/vue-resource.js"> </script>
+  <script type="text/javascript" src="/scripts/vueconf.js"> </script>
   </body>
 </html>
 
