--- a/Software/resources/views/experto/dashboard.njk
+++ b/Software/resources/views/experto/dashboard.njk
@@ -10,7 +10,7 @@
 				  <h3>Ingresar Links</h3>
 
 				  {{ form.open({action: 'ContentsController.scrape'}) }}
-				  <div style="">
+				  <div style="links-container">
 						{{ form.textarea('pagelist') }}
 					  </div>
 					  <div class="button">
