--- a/Software/resources/views/experto/master.njk
+++ b/Software/resources/views/experto/master.njk
@@ -7,8 +7,8 @@
     <meta content='lab2023' name='author'>
     <meta content='' name='description'>
     <meta content='' name='keywords'>
-    <link href="css/application-a07755f5.css" rel="stylesheet" type="text/css" />
-    <link href="css/extras.css" rel="stylesheet" type="text/css" />
+    <link href="/css/application-a07755f5.css" rel="stylesheet" type="text/css" />
+    <link href="/css/extras.css" rel="stylesheet" type="text/css" />
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<link href="https://netdna.bootstrapcdn.com/font-awesome/3.2.0/css/font-awesome.min.css" rel="stylesheet" type="text/css" />
     <link href="assets/images/favicon.ico" rel="icon" type="image/ico" />
@@ -22,28 +22,6 @@
         KolbFinder
       </a>
       <ul class='nav navbar-nav pull-right'>
-        <li class='dropdown'>
-          <a class='dropdown-toggle' data-toggle='dropdown' href='#'>
-            <i class='icon-envelope'></i>
-            Messages
-            <span class='badge'>5</span>
-            <b class='caret'></b>
-          </a>
-          <ul class='dropdown-menu'>
-            <li>
-              <a href='#'>New message</a>
-            </li>
-            <li>
-              <a href='#'>Inbox</a>
-            </li>
-            <li>
-              <a href='#'>Out box</a>
-            </li>
-            <li>
-              <a href='#'>Trash</a>
-            </li>
-          </ul>
-        </li>
         <li>
           <a href='#'>
             <i class='icon-cog'></i>
@@ -91,39 +69,14 @@
       <section id='tools'>
         <ul class='breadcrumb' id='breadcrumb'>
           <li class='title'>Dashboard</li>
-          <li><a href="#">Lorem</a></li>
-          <li class='active'><a href="#">ipsum</a></li>
         </ul>
-        <div id='toolbar'>
-          <div class='btn-group'>
-            <a class='btn' data-toggle='toolbar-tooltip' href='#' title='Building'>
-              <i class='icon-building'></i>
-            </a>
-            <a class='btn' data-toggle='toolbar-tooltip' href='#' title='Laptop'>
-              <i class='icon-laptop'></i>
-            </a>
-            <a class='btn' data-toggle='toolbar-tooltip' href='#' title='Calendar'>
-              <i class='icon-calendar'></i>
-              <span class='badge'>3</span>
-            </a>
-            <a class='btn' data-toggle='toolbar-tooltip' href='#' title='Lemon'>
-              <i class='icon-lemon'></i>
-            </a>
-          </div>
-          <div class='label label-danger'>
-            Danger
-          </div>
-          <div class='label label-info'>
-            Info
-          </div>
-        </div>
       </section>
       <!-- Content -->
       <div id='content'>
         <div class='panel panel-default'>
           <div class='panel-heading'>
-            <i class='icon-beer icon-large'></i>
-            Hierapolis Rocks!
+            <i class='fa fa-hand-paper-o'></i>
+            KolbFinder!
             <div class='panel-tools'>
               <div class='btn-group'>
                 <a class='btn' href='#'>
