cambios menores route.js

--- a/Software/resources/views/experto/master.njk
+++ b/Software/resources/views/experto/master.njk
@@ -74,15 +74,15 @@
         <ul id='dock'>
           <li class='active launcher'>
             <i class='icon-dashboard'></i>
-            <a href="dashboard.html">Dashboard</a>
+            <a href="experto">Dashboard</a>
           </li>
           <li class='launcher'>
             <i class='fa fa-book'></i>
-            <a href="forms.html">Catalogos</a>
+            <a href="catalogos">Catalogos</a>
           </li>
           <li class='launcher'>
             <i class='fa fa-paperclip'></i>
-            <a href="tables.html">Borradores</a>
+            <a href="Borradores">Borradores</a>
           </li>
         </ul>
         <div data-toggle='tooltip' id='beaker' title='Made by lab2023'></div>
