cambios menores, rutas y vistas

--- a/Software/resources/views/experto/master.njk
+++ b/Software/resources/views/experto/master.njk
@@ -50,17 +50,17 @@
       <section id='sidebar'>
         <i class='icon-align-justify icon-large' id='toggle'></i>
         <ul id='dock'>
-          <li class='active launcher'>
+          <li class='launcher'>
             <i class='icon-dashboard'></i>
-            <a href="dashboard.html">Dashboard</a>
+            <a href="experto">Dashboard</a>
           </li>
           <li class='launcher'>
             <i class='fa fa-book'></i>
-            <a href="forms.html">Catalogos</a>
+            <a href="catalogos">Catalogos</a>
           </li>
           <li class='launcher'>
             <i class='fa fa-paperclip'></i>
-            <a href="tables.html">Borradores</a>
+            <a href="borradores">Agregar Links</a>
           </li>
         </ul>
         <div data-toggle='tooltip' id='beaker' title='Made by lab2023'></div>
