--- a/Software/resources/views/experto/borradores.njk
+++ b/Software/resources/views/experto/borradores.njk
@@ -1,4 +1,23 @@
 {% extends 'experto/master' %}
 {% block content %}
+<p>Agregue una lista de link donde quiera obtener contenido</p>
 
+			<div class="row">
+				<div class="col-sm-6">
+				  <h3>Ingresar Links</h3>
+
+				  {{ form.open({action: 'ContentsController.scrape'}) }}
+				  <div style="links-container">
+						{{ form.textarea('pagelist') }}
+					  </div>
+					  <div class="button">
+						  {{ form.submit('Ingresar') }}
+					  </div>
+				  {{ form.close() }}
+
+				</div>
+				<div class="col-sm-6">
+				</div>
+
+			</div>
 {% endblock %}
