--- a/Software/resources/views/experto/dashboard.njk
+++ b/Software/resources/views/experto/dashboard.njk
@@ -3,28 +3,14 @@
 
 
 
-			<p>Bienvenido a la aplicación!, coloque una lista de link donde quiera obtener contenido</p>
+			<h1>Bienvenido a KolbFinder!</h1>
+			<p> La plataforma diseñada para la gestión de contenidos y aprendizaje espeializado</p>
 
-			<div class="row">
-				<div class="col-sm-6">
-				  <h3>Ingresar Links</h3>
-
-				  {{ form.open({action: 'ContentsController.scrape'}) }}
-				  <div style="links-container">
-						{{ form.textarea('pagelist') }}
-					  </div>
-					  <div class="button">
-						  {{ form.submit('Ingresar') }}
-					  </div>
-				  {{ form.close() }}
-
-				</div>
-				<div class="col-sm-6">
-				</div>
-
-			</div>
-
-<h3>Crear Usuario</h3>
+<br>
+<br>
+<br>
+<br>			
+<h3>Agregue Nuevos Calificadores</h3>
 {{ form.open({action: 'UsersController.create'}) }}
   {{ csrfField }}
 
