--- a/Software/resources/views/experto/master.njk
+++ b/Software/resources/views/experto/master.njk
@@ -18,7 +18,7 @@
     <!-- Navbar -->
     <div class='navbar navbar-default' id='navbar'>
       <a class='navbar-brand' href='#'>
-		<img src="assets/Logo.svg" style="height: 30px; margin-bottom: 6px;"></img>
+		<img src="/assets/Logo.svg" style="height: 30px; margin-bottom: 6px;"></img>
         KolbFinder
       </a>
       <ul class='nav navbar-nav pull-right'>
@@ -52,15 +52,15 @@
         <ul id='dock'>
           <li class='launcher'>
             <i class='icon-dashboard'></i>
-            <a href="experto">Dashboard</a>
+            <a href="/experto">Dashboard</a>
           </li>
           <li class='launcher'>
             <i class='fa fa-book'></i>
-            <a href="catalogos">Catalogos</a>
+            <a href="/catalogos">Catalogos</a>
           </li>
           <li class='launcher'>
             <i class='fa fa-paperclip'></i>
-            <a href="borradores">Agregar Links</a>
+            <a href="/borradores">Agregar Links</a>
           </li>
         </ul>
         <div data-toggle='tooltip' id='beaker' title='Made by lab2023'></div>
@@ -100,15 +100,23 @@
       {% block footer %}
 	  {% endblock %}
     <!-- Javascripts -->
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js" type="text/javascript"></script><script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js" type="text/javascript"></script><script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.6.2/modernizr.min.js" type="text/javascript"></script><script src="scripts/application-985b892b.js" type="text/javascript"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js" type="text/javascript"></script><script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js" type="text/javascript"></script><script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.6.2/modernizr.min.js" type="text/javascript"></script><script src="/scripts/application-985b892b.js" type="text/javascript"></script>
 
   <script>
     window.Adonis = "{{ csrfToken }}"  </script>
-  <script type="text/javascript" src="scripts/vue.js"> </script>
-  <script type="text/javascript" src="scripts/Sortable.min.js"> </script>
-  <script type="text/javascript" src="scripts/vuedraggable.js"> </script>
-  <script type="text/javascript" src="scripts/vue-resource.js"> </script>
-  <script type="text/javascript" src="scripts/vueconf.js"> </script>
+  <script type="text/javascript" src="/scripts/vue.js"> </script>
+  <script type="text/javascript" src="/scripts/Sortable.min.js"> </script>
+  <script type="text/javascript" src="/scripts/vuedraggable.js"> </script>
+  <script type="text/javascript" src="/scripts/vue-resource.js"> </script>
+	{% if buttons %}
+	<script>
+		const id_ = {{id_}};
+		const type_ = {{type_}};
+	</script>
+	<script type="text/javascript" src="/scripts/vue-admin-a-publico.js"></script>
+	{% else %}
+  <script type="text/javascript" src="/scripts/vueconf.js"></script>
+	{% endif %}
   </body>
 </html>
 
