--- a/Software/resources/views/experto/catalogo_view.njk
+++ b/Software/resources/views/experto/catalogo_view.njk
@@ -1,10 +1,10 @@
 {% extends 'experto/master' %}
 {% block content %}
 
-
 <div id="admincatalogo" >
 	<h2>{{ catalogo.titulo }}</h2>
 	<h3>Estilo elegido: ?% adonisobject.typestring %?</h3>
+
 	Cambiar estilo: 
 	<a v-on:click="changeView(0)" class="btn btn-primary"  >Total</a>
 	<a v-on:click="changeView(1)" class="btn btn-primary"  >Convergente</a>
@@ -17,30 +17,16 @@
     <th>Contenido</th>
     <th>Estadisticas</th>
   </tr>
-	<tbody>
-	  <transition-group>
-		<tr v-for="item in images" :key="item.key">
-			<td>
-				<img @click="item.select = true" v-if="item.select" style="float: left; border-style: solid; border-width: 3px; border-color: green; margin: 3px 3px 3px 3px" :src="item.imgurl"></img>
-				<img @click="item.select = true" v-else style="float: left; border-style: solid; border-width: 3px; border-color: red; margin: 3px 3px 3px 3px" :src="item.imgurl"></img>
-			</td>
-			<td>
-				<ul>
-					<li>Likes: ?% item.likes %?</li>
-					<li>Dislikes: ?% item.total - item.likes %?</li>
-					<li>Total: ?% item.total %?</li>
-					<li>Select: ?% item.select %?</li>
-					<li>Key: ?% item.key %?</li>
-				</ul>
-			</td>
-		</tr>
-	  </transition-group>
-	</tbody>
-</table> 
+	<table><tbody>
+	<tr is="that-image"
+			v-for="(image, index) in currimages"
+			v-bind:image="image" v-bind:index="index">
+	</tr>
+	</tbody></table>
+	<a class="btn btn-primary" @click="sendcontent">Publicar Contenido</a>
+
+
 </div>
-
-
-
 
 {% endblock %}
 
