--- a/Software/resources/views/experto/master.njk
+++ b/Software/resources/views/experto/master.njk
@@ -56,7 +56,7 @@
           </li>
           <li class='launcher'>
             <i class='fa fa-book'></i>
-            <a href="/catalogos">Catalogos</a>
+            <a href="/experto/catalogos">Catalogos</a>
           </li>
           <li class='launcher'>
             <i class='fa fa-paperclip'></i>
