--- a/Software/resources/views/home.njk
+++ b/Software/resources/views/home.njk
@@ -41,6 +41,9 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse navbar-right navbar-main-collapse">
       <ul class="nav navbar-nav">
+        <li class="">
+          <a href="/catalogos">Catalogos</a> 
+        </li>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown">Contacto</a> 
           <ul id="login-dp" class="dropdown-menu"> 
